--- a/railway.toml
+++ b/railway.toml
@@ -2,6 +2,9 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "python main.py"
+startCommand = "python bot.py"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
+
+[build.env]
+PYTHON_VERSION = "3.9"
